--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,6 @@
+<ClerkProvider>
+
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -5,9 +8,10 @@
   <title>AngularEcommerce</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico?v=2">
 </head>
 <body>
   <app-root></app-root>
 </body>
 </html>
+</ClerkProvider>
